force-app/main/default/objects/DC_Roof_Product__c/DC_Roof_Product__c.object-meta.xml
<CustomObject>
    <label>Roof Product</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roofs Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>