force-app/main/default/objects/DC_Roof_Product__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this Roof Product.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Roofs</relationshipName>
    <type>Lookup</type>
</CustomField>