force-app/main/default/objects/DC_Roof_Product__c/fields/Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Data_Hall__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The associated Datahall for this roof product.</description>
    <label>Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipName>Roofs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>