force-app/main/default/objects/DC_Roof_Product__c/fields/Diameter_in__c.field-meta.xml
<CustomField>
    <fullName>Diameter_in__c</fullName>
    <description>Diameter of the antenna in inches.</description>
    <label>Diameter (in)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>