force-app/main/default/objects/DC_Roof_Product__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <description>The associated floor of the datahall added on to this record</description>
    <formula>Data_Hall__r.DC_Floor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor</label>
    <type>Text</type>
</CustomField>