force-app/main/default/objects/DC_Roof_Product__c/fields/MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Suite_ID__c</fullName>
    <description>The MRI Suite ID reserved for this Roof Product.</description>
    <label>MRI Suite ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>