force-app/main/default/objects/DC_Roof_Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The type of product on the roof.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Antenna</fullName>
            </value>
            <value>
                <fullName>Antenna Mast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>